Consent Card Dialog box. Correct text wrapping.
Bugfix/15949:C2Sv3 :: Patient Portal :: Android :: Manage Consent :: Try My Consent wording doesn't fit on label

--- a/client/src/app/consent/consent-card/consent-card.component.scss
+++ b/client/src/app/consent/consent-card/consent-card.component.scss
@@ -51,3 +51,15 @@
   width: 80%;
 }
 
+//<---------------------------- Dialog ----------------------------->
+.consent-option-text {
+  text-align: left;
+  white-space: normal;
+  line-height: 18px;
+}
+// CHECK ABOUT THIS CODE. WILL NOT WORK FROM THIS STYLESHEET. DUPLICATED IN CORE.SCSS
+.mat-list-item-content {
+  height: auto !important;
+  padding: 3px 16px !important;
+}
+
